# jetson-inference-lite

./: .gitmodules  CMakeLists.txt  CMakePreBuild.sh  README.md
app/: CMakeLists.txt  detectnet.cpp
